--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -49,9 +49,9 @@
 
 <div class="login-container">
     <h2>로그인</h2>
-    <form action="/login" method="POST">
+    <form action="/api/users/login" method="POST">
         <input type="text" name="userId" placeholder="아이디" required />
-        <input type="password" name="passWord" placeholder="비밀번호" required />
+        <input type="password" name="password" placeholder="비밀번호" required />
         <button type="submit">로그인</button>
     </form>
 </div>
